# chiefray

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  pyproject.toml  vcpkg.json
bindings/: CMakeLists.txt
bindings/python/chiefray/: __init__.py
bindings/python/chiefray/core/: __init__.py
bindings/src/: module.cpp
bindings/src/core/: bind_mat3d.cpp  bind_vec3d.cpp
bindings/src/raytracing/: bind_free_functions.cpp  bind_ray3d.cpp  bind_surfaces.cpp
bindings/tests/: test_mat3d.py  test_surfaces.py  test_vec3d.py
cmake/: Cuda.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalysis.cmake  Warnings.cmake
include/chiefray/core/: mat3d.hpp  platform.hpp  vec3d.hpp
include/chiefray/cuda/: launch.hpp
include/chiefray/io/: tiff_io.hpp
include/chiefray/raytracing/: ray3d.hpp  surfaces.hpp
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  trace_rays.cu
src/io/: CMakeLists.txt  tiff_io.cpp  tiff_io.hpp
tests/: CMakeLists.txt  test_mat3d.cpp  test_surfaces.cpp  test_tiff_io.cpp  test_vec3d.cpp  utils4tests.hpp
